# kts-nds

./: .gitignore  CLAUDE.md  Cargo.toml  Justfile  README.md  armv5te-nintendo-ds.json  build.rs  flake.nix
.cargo/: config.toml
.claude/skills/add-capability/: SKILL.md
.claude/skills/asset-audit/: SKILL.md
.claude/skills/bake-asset/: SKILL.md
.claude/skills/blocksds-docs/: SKILL.md
.claude/skills/design-space/: SKILL.md
.claude/skills/design-sync/: SKILL.md
.claude/skills/maxmod-docs/: SKILL.md
.claude/skills/playtest-log/: SKILL.md
.claude/skills/preview-rom/: SKILL.md
assets/levels/facility/: atrium.ron  corridor.ron  level.ron
assets/prefabs/: landmark_block.ron  patroller.ron
assets/spaces/: atrium.ron  corridor.ron
crates/bevy_nds/: Cargo.toml
crates/bevy_nds/src/: diagnostics.rs  ffi.rs  lib.rs  render.rs  runner.rs  time.rs
crates/bevy_nds_3d/: Cargo.toml
crates/bevy_nds_3d/src/: ffi.rs  lib.rs
crates/bevy_nds_3d_cull/: Cargo.toml
crates/bevy_nds_3d_cull/src/: lib.rs
crates/bevy_nds_3d_macros/: Cargo.toml
crates/bevy_nds_3d_macros/src/: lib.rs
crates/bevy_nds_3d_obj/: Cargo.toml
crates/bevy_nds_3d_obj/src/: lib.rs
crates/bevy_nds_audio/: Cargo.toml
crates/bevy_nds_audio/src/: ffi.rs  lib.rs  sfx.rs
crates/bevy_nds_bg/: Cargo.toml
crates/bevy_nds_bg/src/: asset.rs  ffi.rs  lib.rs
crates/bevy_nds_diagnostics/src/: lib.rs
crates/bevy_nds_input/src/: lib.rs
crates/bevy_nds_loop/: Cargo.toml
crates/bevy_nds_loop/src/: lib.rs
crates/bevy_nds_math/: Cargo.toml
crates/bevy_nds_math/src/: fx.rs  fx_vec.rs  hw.rs  lib.rs  mat.rs  radial.rs  stick.rs
crates/bevy_nds_rtc/src/: lib.rs
crates/bevy_nds_save/: Cargo.toml
crates/bevy_nds_save/src/: ffi.rs  lib.rs  sys.rs
crates/bevy_nds_scene/: Cargo.toml
crates/bevy_nds_scene/src/: asset.rs  lib.rs
crates/bevy_nds_sprite/: Cargo.toml
crates/bevy_nds_sprite/src/: asset.rs  ffi.rs  lib.rs  slots.rs
crates/bevy_nds_text/src/: lib.rs
crates/bevy_nds_video/src/: lib.rs
crates/obj2dl/: Cargo.toml
crates/obj2dl/src/: lib.rs  main.rs
crates/perfread/: Cargo.toml
crates/perfread/src/: main.rs
crates/png2bg/: Cargo.toml
crates/png2bg/src/: lib.rs  main.rs
crates/png2sprite/src/: lib.rs
crates/scene2bin/: Cargo.toml
crates/scene2bin/src/: lib.rs  main.rs
crates/wav2bank/src/: ids.rs  lib.rs  main.rs  wav.rs
docs/design/: PILLARS.md
src/: capture.rs  control.rs  flags.rs  libnds.rs  main.rs  menu.rs  player.rs  radial.rs  transition.rs
tools/scene-editor/: Cargo.toml
tools/scene-editor/.cargo/: config.toml
tools/scene-editor/src/: app.rs  canvas.rs  history.rs  main.rs  panel.rs  viewport.rs  widgets.rs
