[workspace]
members = [
  "crates/bevy_nds",
  "crates/bevy_nds_runtime",
  "crates/bevy_nds_video",
  "crates/bevy_nds_input",
  "crates/bevy_nds_gesture",
  "crates/bevy_nds_time",
  "crates/bevy_nds_diagnostics",
  "crates/bevy_nds_text",
  "crates/bevy_nds_sprite",
  "crates/bevy_nds_nitrofs",
  "crates/bevy_nds_3d",
  "crates/bevy_nds_3d_macros",
  "crates/bevy_nds_3d_obj",
  "crates/obj2dl",
  "crates/bevy_nds_3d_cull",
  "crates/wav2bank",
  "crates/bevy_nds_audio",
]
resolver = "2"

[package]
name = "bevy-ds"
version = "0.1.0"
edition = "2024"

# The game binary. It is a *consumer* of the `bevy_nds` library: all DS-specific
# wiring (FFI, allocator, panic handler, screens, input, rendering, the frame
# loop) lives in that crate, so the game below is ordinary, portable Bevy code.

[dependencies]
bevy_nds = { path = "crates/bevy_nds" }
bevy_nds_3d = { path = "crates/bevy_nds_3d" }
bevy_nds_audio = { path = "crates/bevy_nds_audio" }
bevy_nds_sprite = { path = "crates/bevy_nds_sprite" }

bevy_app = { version = "0.16", default-features = false, features = [
  "critical-section",
] }
bevy_ecs = { version = "0.16", default-features = false, features = [
  "critical-section",
] }
bevy_input = { version = "0.16", default-features = false, features = [
  "critical-section",
  "libm",
] }
bevy_time = { version = "0.16", default-features = false, features = [
  "critical-section",
] }

[build-dependencies]
# Compiles `assets/*.obj` into display-list blobs under `build/nitrofs/` at
# build time, so they can be packed into the ROM filesystem (NitroFS) and loaded
# at runtime. Shares the encoder with `include_obj!`, so output is identical.
obj2dl = { path = "crates/obj2dl" }
# Bakes `audio/{music,sfx}/*.wav` into `build/nitrofs/soundbank.bin` (via mmutil)
# plus a generated Rust module of the sound IDs, included by the game.
wav2bank = { path = "crates/wav2bank" }

[profile.dev]
panic = "abort"
# Splitting `bevy_nds` into per-capability subcrates means the per-frame hot
# path now crosses crate boundaries (text -> video, gesture -> input, etc.).
# Without LTO those become real function calls instead of the inlined helpers
# they were when everything lived in one crate, which costs noticeable fps on
# the 33 MHz ARM9. Thin LTO restores most of the inlining at a modest compile-
# time hit.
lto = "thin"

# Bevy's recommended dev setup: optimize all *dependencies* (notably bevy_ecs)
# so the debug ROM still runs at a usable frame rate on the 33 MHz ARM9.
[profile.dev.package."*"]
opt-level = 3

# Our engine subcrates are on the per-frame hot path (FFI packing, the 3D render
# loop), so optimize them too — the 33 MHz ARM9 can't afford an unoptimized
# render path. The game crate (`bevy-ds`, the root package) is intentionally
# left at the default opt-level 0 so iterating on game logic stays fast to
# compile; it holds only lightweight per-frame ECS systems.
[profile.dev.package.bevy_nds]
opt-level = 3

[profile.dev.package.bevy_nds_runtime]
opt-level = 3

[profile.dev.package.bevy_nds_video]
opt-level = 3

[profile.dev.package.bevy_nds_input]
opt-level = 3

[profile.dev.package.bevy_nds_gesture]
opt-level = 3

[profile.dev.package.bevy_nds_time]
opt-level = 3

[profile.dev.package.bevy_nds_diagnostics]
opt-level = 3

[profile.dev.package.bevy_nds_text]
opt-level = 3

[profile.dev.package.bevy_nds_sprite]
opt-level = 3

[profile.dev.package.bevy_nds_nitrofs]
opt-level = 3

[profile.dev.package.bevy_nds_3d]
opt-level = 3

[profile.dev.package.bevy_nds_3d_cull]
opt-level = 3

[profile.dev.package.bevy_nds_audio]
opt-level = 3

[profile.dev.package.bevy_nds_3d_macros]
opt-level = 3

[profile.release]
panic = "abort"
opt-level = "s"
lto = true
codegen-units = 1
strip = true
