[workspace]
members = [
  "crates/bevy_nds",
  "crates/bevy_nds_runtime",
  "crates/bevy_nds_video",
  "crates/bevy_nds_input",
  "crates/bevy_nds_gesture",
  "crates/bevy_nds_time",
  "crates/bevy_nds_diagnostics",
  "crates/bevy_nds_text",
  "crates/bevy_nds_sprite",
  "crates/bevy_nds_nitrofs",
  "crates/bevy_nds_3d",
  "crates/bevy_nds_3d_macros",
  "crates/bevy_nds_3d_obj",
  "crates/obj2dl",
  "crates/bevy_nds_3d_cull",
  "crates/bevy_nds_loop",
  "crates/wav2bank",
  "crates/bevy_nds_audio",
  "crates/png2sprite",
  "crates/bevy_nds_math",
  "crates/bevy_nds_cothread",
  "crates/perfread",
  "crates/bevy_nds_rtc",
  "crates/bevy_nds_save",
  "crates/bevy_nds_bg",
  "crates/png2bg",
  "crates/bevy_nds_scene",
  "crates/scene2bin",
]
# The desktop scene editor is a standalone host GUI app, detached from this DS
# workspace (it has its own `[workspace]` + `.cargo/config.toml`); excluded so
# cargo doesn't try to build it for the ARM9 target.
exclude = ["tools/scene-editor"]
resolver = "2"

[package]
name = "kts"
version = "0.1.0"
edition = "2024"

# Kill the Serpent — the game. It is a *consumer* of the `bevy_nds` companion
# library: all DS-specific wiring (FFI, allocator, panic handler, screens, input,
# rendering, the frame loop) lives in those crates, so the game below is ordinary,
# portable Bevy code. The game's needs drive which `bevy_nds` crates exist.

[dependencies]
bevy_nds = { path = "crates/bevy_nds" }
bevy_nds_3d = { path = "crates/bevy_nds_3d" }
bevy_nds_scene = { path = "crates/bevy_nds_scene" }
bevy_nds_audio = { path = "crates/bevy_nds_audio" }
bevy_nds_sprite = { path = "crates/bevy_nds_sprite" }
bevy_nds_bg = { path = "crates/bevy_nds_bg" }
bevy_nds_math = { path = "crates/bevy_nds_math" }
bevy_nds_loop = { path = "crates/bevy_nds_loop" }

bevy_app = { version = "0.16", default-features = false, features = [
  "critical-section",
] }
bevy_ecs = { version = "0.16", default-features = false, features = [
  "critical-section",
] }
bevy_input = { version = "0.16", default-features = false, features = [
  "critical-section",
  "libm",
] }
bevy_time = { version = "0.16", default-features = false, features = [
  "critical-section",
] }

[build-dependencies]
# Compiles `assets/*.obj` into display-list blobs under `build/nitrofs/` at
# build time, so they can be packed into the ROM filesystem (NitroFS) and loaded
# at runtime. Shares the encoder with `include_obj!`, so output is identical.
obj2dl = { path = "crates/obj2dl" }
# Bakes `audio/{music,sfx}/*.wav` into `build/nitrofs/soundbank.bin` (via mmutil)
# plus a generated Rust module of the sound IDs, included by the game.
wav2bank = { path = "crates/wav2bank" }
# Bakes `assets/sprites/*.png` into `build/nitrofs/*.sprite` (via BlocksDS grit)
# so `bevy_nds_sprite` can load them at runtime from NitroFS.
png2sprite = { path = "crates/png2sprite" }
# Bakes `assets/backgrounds/{tiled,bitmap}/**/*.png` into
# `build/nitrofs/backgrounds/*.{bg,bbg}` (via BlocksDS grit) so `bevy_nds_bg`
# can load them at runtime from NitroFS.
png2bg = { path = "crates/png2bg" }
# Bakes `assets/spaces/*.ron` space sidecars into `build/nitrofs/spaces/*.scene`
# (issue #27) plus a generated `spaces.rs` of NitroFS-path constants the game
# `include!`s, loaded at runtime by `bevy_nds_scene`.
scene2bin = { path = "crates/scene2bin" }

[profile.dev]
panic = "abort"
# Splitting `bevy_nds` into per-capability subcrates means the per-frame hot
# path now crosses crate boundaries (text -> video, gesture -> input, etc.).
# Without LTO those become real function calls instead of the inlined helpers
# they were when everything lived in one crate, which costs noticeable fps on
# the 33 MHz ARM9. Thin LTO restores most of the inlining at a modest compile-
# time hit.
lto = "thin"

# Bevy's recommended dev setup: optimize all *dependencies* (notably bevy_ecs)
# so the debug ROM still runs at a usable frame rate on the 33 MHz ARM9.
[profile.dev.package."*"]
opt-level = 3

# The game crate (`kts`, the root) ships with the game's `setup` / update
# systems. We used to leave it at opt-level = 0 for fast iteration, but
# every additional capability plugin (sprite, audio, bg, …) adds another batch
# of monomorphized Bevy ECS code to it, and at opt-level = 0 those grew past
# the ARM9's 3.5 MiB EWRAM ceiling. opt-level = 1 brings the binary back under
# without noticeably slowing rebuilds. Engine subcrates below stay at 3
# because they sit on the per-frame hot path.
[profile.dev.package.kts]
opt-level = 1

# Our engine subcrates are on the per-frame hot path (FFI packing, the 3D render
# loop), so optimize them too — the 33 MHz ARM9 can't afford an unoptimized
# render path.
[profile.dev.package.bevy_nds]
opt-level = 3

[profile.dev.package.bevy_nds_runtime]
opt-level = 3

[profile.dev.package.bevy_nds_video]
opt-level = 3

[profile.dev.package.bevy_nds_input]
opt-level = 3

[profile.dev.package.bevy_nds_gesture]
opt-level = 3

[profile.dev.package.bevy_nds_time]
opt-level = 3

[profile.dev.package.bevy_nds_diagnostics]
opt-level = 3

[profile.dev.package.bevy_nds_text]
opt-level = 3

[profile.dev.package.bevy_nds_sprite]
opt-level = 3

[profile.dev.package.bevy_nds_nitrofs]
opt-level = 3

[profile.dev.package.bevy_nds_3d]
opt-level = 3

[profile.dev.package.bevy_nds_3d_cull]
opt-level = 3

[profile.dev.package.bevy_nds_loop]
opt-level = 3

[profile.dev.package.bevy_nds_audio]
opt-level = 3

[profile.dev.package.bevy_nds_3d_macros]
opt-level = 3

[profile.dev.package.bevy_nds_math]
opt-level = 3

[profile.dev.package.bevy_nds_cothread]
opt-level = 3

[profile.dev.package.bevy_nds_rtc]
opt-level = 3

[profile.dev.package.bevy_nds_save]
opt-level = 3

[profile.dev.package.bevy_nds_bg]
opt-level = 3

[profile.dev.package.bevy_nds_scene]
opt-level = 3

[profile.release]
panic = "abort"
opt-level = "s"
lto = true
codegen-units = 1
strip = true
