[package]
name = "bevy_nds"
version = "0.1.0"
edition = "2024"
description = "Run Bevy's no_std ECS on the Nintendo DS — umbrella crate re-exporting the platform subcrates."

# The umbrella crate. It re-exports every platform-layer subcrate (video, input,
# gesture, time, diagnostics, text, nitrofs) and the bare-metal runtime, and
# bundles them as a single `DsPlugins` plugin group. Games depend on this crate
# and `use bevy_nds::prelude::*;` to get the whole platform; they never touch
# FFI directly.
#
# The bare-metal items (global allocator, panic handler, critical-section) live
# in `bevy_nds_runtime`, which this crate pulls in transitively — so the final
# game binary picks them up by depending on `bevy_nds`.

[lib]

[dependencies]
bevy_nds_runtime = { path = "../bevy_nds_runtime" }
bevy_nds_video = { path = "../bevy_nds_video" }
bevy_nds_input = { path = "../bevy_nds_input" }
bevy_nds_gesture = { path = "../bevy_nds_gesture" }
bevy_nds_time = { path = "../bevy_nds_time" }
bevy_nds_diagnostics = { path = "../bevy_nds_diagnostics" }
bevy_nds_text = { path = "../bevy_nds_text" }
bevy_nds_nitrofs = { path = "../bevy_nds_nitrofs" }
bevy_nds_math = { path = "../bevy_nds_math" }
bevy_nds_cothread = { path = "../bevy_nds_cothread" }
bevy_nds_rtc = { path = "../bevy_nds_rtc" }
bevy_nds_save = { path = "../bevy_nds_save" }

bevy_app = { version = "0.16", default-features = false, features = [
  "critical-section",
] }
bevy_input = { version = "0.16", default-features = false, features = [
  "critical-section",
  "libm",
] }
bevy_time = { version = "0.16", default-features = false, features = [
  "critical-section",
] }
