[package]
name = "bevy_nds_3d"
version = "0.1.0"
edition = "2024"
description = "Hardware-accelerated 3D for bevy_nds, driving the Nintendo DS 3D engine (no_std)."

# An additive rendering backend for `bevy_nds`. It drives the DS *hardware* 3D
# geometry engine (libnds GL-style API) and exposes it as ordinary Bevy
# components/resources, so games describe a scene and the hardware draws it. It
# depends on `bevy_nds` for the platform layer (runtime, video bring-up, the
# vblank frame loop) and adds no allocator / panic handler of its own.

[lib]

[dependencies]
bevy_nds_video = { path = "../bevy_nds_video" }
bevy_nds_nitrofs = { path = "../bevy_nds_nitrofs" }
bevy_nds_3d_macros = { path = "../bevy_nds_3d_macros" }
bevy_nds_3d_cull = { path = "../bevy_nds_3d_cull" }
# 20.12 fixed-point + hardware divide/sqrt for the per-frame normalize on
# directional light directions (replaces a softfloat `f32::sqrt` + 3 `f32` divs
# with one MMIO sqrt + 3 MMIO divides on the math coprocessor).
bevy_nds_math = { path = "../bevy_nds_math" }

bevy_app = { version = "0.16", default-features = false, features = [
  "critical-section",
] }
bevy_ecs = { version = "0.16", default-features = false, features = [
  "critical-section",
] }
# glam (via bevy_math) for friendly f32 Vec3 maths; `libm` keeps it no_std.
bevy_math = { version = "0.16", default-features = false, features = ["libm"] }
# For the standard `Touches` resource the picking pass reads.
bevy_input = { version = "0.16", default-features = false, features = [
  "critical-section",
  "libm",
] }
